--- a/ui/src/app/login-page/login-page.component.html
+++ b/ui/src/app/login-page/login-page.component.html
@@ -21,22 +21,23 @@
         Please enter a password.
       </div>
     </div>
-    
 
-      <div class="flex items-center">
-        <input id="terms" type="checkbox" formControlName="terms" class="mr-2" checked>
-        <label for="terms" class="text-gray-700 text-sm">I agree to the terms and conditions</label>
-      </div>
-      <div class="flex items-center">
-        <input id="consent" type="checkbox" formControlName="consent" class="mr-2" checked>
-        <label for="consent" class="text-gray-700 text-sm">Share analytics data</label>
-      </div>
+
+    <div class="flex items-center">
+      <input id="terms" type="checkbox" formControlName="terms" class="mr-2" checked>
+      <label for="terms" class="text-gray-700 text-sm">I agree to the <a href="https://ekatrit.net/terms" style="color: blue;">terms and
+        conditions</a></label>
+    </div>
+    <div class="flex items-center">
+      <input id="consent" type="checkbox" formControlName="consent" class="mr-2" checked>
+      <label for="consent" class="text-gray-700 text-sm">Share analytics data</label>
+    </div>
     <div class="flex items-center justify-between mt-4">
       <button type="submit"
         class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
         Login
       </button>
-      <button type="button"
+      <button type="button" (click)="onSignIn()" 
         class="bg-ek-blue hover:bg-gray-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
         Sign In
       </button>
