black proj page

--- a/ui/src/app/overview/overview.component.css
+++ b/ui/src/app/overview/overview.component.css
@@ -1,19 +1,19 @@
 .project-1 {
-    background: linear-gradient(to right, #91bae3, #eeefe9);
-  }
-  
-  .project-2 {
-    background: linear-gradient(to right, #e9ecef, #dee2e6);
-  }
-  
-  .project-3 {
-    background: linear-gradient(to right, #dee2e6, #ced4da);
-  }
-  
-  .project-4 {
-    background: linear-gradient(to right, #ced4da, #adb5bd);
-  }
-  
-  .project-0 {
-    background: linear-gradient(to right, #95b8db, #bda8c4);
-  }
+  background: linear-gradient(to right, #c5d9f2, #f2f5f9);
+}
+
+.project-2 {
+  background: linear-gradient(to right, #f2f4f5, #e8edf0);
+}
+
+.project-3 {
+  background: linear-gradient(to right, #e8edf0, #dce2e6);
+}
+
+.project-4 {
+  background: linear-gradient(to right, #dce2e6, #cfd6dc);
+}
+
+.project-0 {
+  background: linear-gradient(to right, #c5d8e9, #edf9f4);
+}
